# SDL3_template

./: AppMain.cpp  AppMain.h  CMakeLists.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
